--- a/packages/maplibre-theme/src/themes/classic/layout.postcss
+++ b/packages/maplibre-theme/src/themes/classic/layout.postcss
@@ -1,7 +1,5 @@
 .maplibregl-map {
-  font:
-    12px/20px "Helvetica Neue",
-    Arial,
-    Helvetica,
-    sans-serif;
+  font: var(--ml-font);
+
+  color: rgb(var(--ml-c-text));
 }
