--- a/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--base.postcss
+++ b/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--base.postcss
@@ -17,3 +17,18 @@
   margin: 0 10px 10px 0;
   float: right;
 }
+
+.maplibregl-ctrl-group {
+  border-radius: 4px;
+  background: #fff;
+}
+
+.maplibregl-ctrl-group:not(:empty) {
+  box-shadow: 0 0 0 2px rgb(0 0 0 / 10%);
+}
+
+@media (-ms-high-contrast: active) {
+  .maplibregl-ctrl-group:not(:empty) {
+    box-shadow: 0 0 0 2px ButtonText;
+  }
+}
