--- a/packages/maplibre-theme/src/themes/legacy/ui/popup--content.postcss
+++ b/packages/maplibre-theme/src/themes/legacy/ui/popup--content.postcss
@@ -9,16 +9,12 @@
 }
 
 .maplibregl-popup-close-button:hover {
-  background-color: rgb(var(--ml-c-gray-2));
-}
-
-.maplibregl-popup-close-button:active {
-  background-color: rgb(var(--ml-c-gray-3));
+  background-color: rgb(0 0 0 / 5%);
 }
 
 .maplibregl-popup-content {
-  background: rgb(var(--ml-c-bg));
+  background: #fff;
   border-radius: 3px;
-  box-shadow: var(--ml-shadow);
+  box-shadow: 0 1px 2px rgb(0 0 0 / 10%);
   padding: 15px 10px;
 }
