--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--components.postcss
@@ -1,76 +1,36 @@
-.maplibregl-ctrl-group button {
-  width: 29px;
-  height: 29px;
-  display: block;
-  padding: 0;
-  outline: none;
-  border: 0;
-  box-sizing: border-box;
-  background-color: transparent;
-  cursor: pointer;
+.maplibregl-ctrl-group {
+  border-radius: var(--ml-ctrl-border-radius);
+  background: rgb(var(--ml-c-bg));
 }
 
-.maplibregl-ctrl-group button + button {
-  border-top: 1px solid #ddd;
-}
-
-.maplibregl-ctrl button .maplibregl-ctrl-icon {
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center center;
+.maplibregl-ctrl-group:not(:empty) {
+  box-shadow: var(--ml-shadow-ctrl);
 }
 
 @media (-ms-high-contrast: active) {
-  .maplibregl-ctrl-icon {
-    background-color: transparent;
+  .maplibregl-ctrl-group:not(:empty) {
+    box-shadow: 0 0 0 2px ButtonText;
   }
+}
 
+.maplibregl-ctrl-group button + button {
+  border-top: 1px solid rgb(var(--ml-c-gray-3));
+}
+
+@media (-ms-high-contrast: active) {
   .maplibregl-ctrl-group button + button {
     border-top: 1px solid ButtonText;
   }
 }
 
-/* https://bugzilla.mozilla.org/show_bug.cgi?id=140562 */
-.maplibregl-ctrl button::-moz-focus-inner {
-  border: 0;
-  padding: 0;
+.maplibregl-ctrl-group button:first-child {
+  border-radius: var(--ml-ctrl-border-radius) var(--ml-ctrl-border-radius) 0 0;
 }
 
-.maplibregl-ctrl-attrib-button:focus,
-.maplibregl-ctrl-group button:focus {
-  box-shadow: 0 0 2px 2px rgb(0 150 255 / 100%);
+.maplibregl-ctrl-group button:last-child {
+  border-radius: 0 0 var(--ml-ctrl-border-radius) var(--ml-ctrl-border-radius);
 }
 
-.maplibregl-ctrl button:disabled {
-  cursor: not-allowed;
-}
-
-.maplibregl-ctrl button:disabled .maplibregl-ctrl-icon {
-  opacity: 0.25;
-}
-
-.maplibregl-ctrl button:not(:disabled):hover {
-  background-color: rgb(0 0 0 / 5%);
-}
-
-.maplibregl-ctrl-group button:focus:focus-visible {
-  box-shadow: 0 0 2px 2px rgb(0 150 255 / 100%);
-}
-
-.maplibregl-ctrl-group button:focus:not(:focus-visible) {
-  box-shadow: none;
-}
-
-.maplibregl-ctrl-group button:focus:first-child {
-  border-radius: 4px 4px 0 0;
-}
-
-.maplibregl-ctrl-group button:focus:last-child {
-  border-radius: 0 0 4px 4px;
-}
-
-.maplibregl-ctrl-group button:focus:only-child {
+.maplibregl-ctrl-group button:only-child {
   border-radius: inherit;
 }
