--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
@@ -1,16 +1,18 @@
 .maplibregl-ctrl.maplibregl-ctrl-attrib {
   padding: 0 5px;
-  background-color: rgb(255 255 255 / 50%);
+  background-color: rgb(var(--ml-c-bg) / 65%);
   margin: 0;
+  font: var(--ml-font-footer);
 }
 
+/* not print */
 @media screen {
   .maplibregl-ctrl-attrib.maplibregl-compact {
     min-height: 20px;
     padding: 2px 24px 2px 0;
     margin: 10px;
     position: relative;
-    background-color: #fff;
+    background-color: rgb(var(--ml-c-bg));
     color: #000;
     border-radius: 12px;
     box-sizing: content-box;
@@ -29,8 +31,9 @@
   .maplibregl-ctrl-attrib-button {
     cursor: pointer;
     position: absolute;
-    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
     background-color: rgb(255 255 255 / 50%);
+
+    display: block;
     width: 24px;
     height: 24px;
     box-sizing: border-box;
@@ -41,13 +44,19 @@
     border: 0;
   }
 
+  .maplibregl-ctrl-attrib-button::before {
+    content: "\e808";
+    margin: 2px 5px;
+    font-size: 14px;
+  }
+
   .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button,
   .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button {
     left: 0;
   }
 
   .maplibregl-ctrl-attrib.maplibregl-compact-show .maplibregl-ctrl-attrib-button {
-    background-color: rgb(0 0 0 / 5%);
+    background-color: rgb(var(--ml-c-gray-2));
   }
 
   .maplibregl-ctrl-bottom-right > .maplibregl-ctrl-attrib.maplibregl-compact::after {
@@ -71,25 +80,13 @@
   }
 }
 
-@media screen and (-ms-high-contrast: active) {
-  .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg", fill=#fff);
-  }
-}
-
-@media screen and (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
-  }
-}
-
 .maplibregl-ctrl-attrib a {
-  color: rgb(0 0 0 / 75%);
+  color: rgb(var(--ml-c-text));
   text-decoration: none;
 }
 
 .maplibregl-ctrl-attrib a:hover {
-  color: inherit;
+  color: rgb(var(--ml-c-neutral));
   text-decoration: underline;
 }
 
