--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-fullscreen.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-fullscreen.postcss
@@ -1,27 +1,7 @@
-.maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-  background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #333);
+.maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon::before {
+  content: "\e80b";
 }
 
-.maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-  background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg");
-}
-
-@media (-ms-high-contrast: active) {
-  .maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #fff);
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg", fill: #fff);
-  }
-}
-
-@media (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl button.maplibregl-ctrl-fullscreen .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-fullscreen.svg", fill: #000);
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-shrink.svg", fill: #000);
-  }
+.maplibregl-ctrl button.maplibregl-ctrl-shrink .maplibregl-ctrl-icon::before {
+  content: "\e80f";
 }
