--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-navigation.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-navigation.postcss
@@ -1,50 +1,19 @@
-.maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon {
-  background-image: svg-load("../assets/maplibregl-ctrl-zoom-out.svg", fill: #333);
+.maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon::before {
+  content: "-";
 }
 
-.maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon {
-  background-image: svg-load("../assets/maplibregl-ctrl-zoom-in.svg", fill: #333);
+.maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon::before {
+  content: "+";
 }
 
-@media (-ms-high-contrast: active) {
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-zoom-out.svg", fill: #fff);
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-zoom-in.svg", fill: #fff);
-  }
+.maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::before {
+  content: "\e809";
 }
-
-@media (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-zoom-out.svg", fill: #000);
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-zoom-in.svg", fill: #000);
-  }
-}
-
-.maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon {
-  background-image: svg-load("../assets/maplibregl-ctrl-compass.svg", fill: #333);
-}
-
-@media (-ms-high-contrast: active) {
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon {
-    @svg-load ctrl-compass-white url("../assets/maplibregl-ctrl-compass.svg") {
-      fill: #fff;
-      #south {
-        fill: #999;
-      }
-    }
-
-    background-image: svg-inline(ctrl-compass-white);
-  }
-}
-
-@media (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon {
-    background-image: svg-load("../assets/maplibregl-ctrl-compass.svg", fill: #000);
-  }
+.maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::after {
+  color: rgb(var(--ml-c-gray-3));
+  content: "\e80a";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
