--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-scale.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-scale.postcss
@@ -1,10 +1,10 @@
 .maplibregl-ctrl-scale {
-  background-color: rgb(255 255 255 / 75%);
-  font-size: 10px;
+  background-color: rgb(var(--ml-c-bg) / 65%);
+  font: var(--ml-font-footer);
   border-width: medium 2px 2px;
   border-style: none solid solid;
-  border-color: #333;
+  border-color: rgb(var(--ml-c-icon));
   padding: 0 5px;
-  color: #333;
+  color: rgb(var(--ml-c-icon));
   box-sizing: border-box;
 }
