--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-terrain.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-terrain.postcss
@@ -1,21 +1,8 @@
-@svg-load ctrl-terrain url("../assets/maplibregl-ctrl-terrain.svg") {
-  fill: #333;
-  #stroke {
-    display: none;
-  }
+.maplibregl-ctrl button.maplibregl-ctrl-terrain .maplibregl-ctrl-icon::before {
+  content: "\e810";
 }
 
-@svg-load ctrl-terrain-enabled url("../assets/maplibregl-ctrl-terrain.svg") {
-  fill: #33b5e5;
-  #stroke {
-    display: none;
-  }
-}
-
-.maplibregl-ctrl button.maplibregl-ctrl-terrain .maplibregl-ctrl-icon {
-  background-image: svg-inline(ctrl-terrain);
-}
-
-.maplibregl-ctrl button.maplibregl-ctrl-terrain-enabled .maplibregl-ctrl-icon {
-  background-image: svg-inline(ctrl-terrain-enabled);
+.maplibregl-ctrl button.maplibregl-ctrl-terrain-enabled .maplibregl-ctrl-icon::before {
+  color: rgb(var(--ml-c-active));
+  content: "\e810";
 }
