--- a/packages/maplibre-theme/src/themes/classic/handler/boxzoom.postcss
+++ b/packages/maplibre-theme/src/themes/classic/handler/boxzoom.postcss
@@ -1,5 +1,5 @@
 .maplibregl-boxzoom {
-  background: #fff;
-  border: 2px dotted #202020;
+  background: rgb(var(--ml-c-bg));
+  border: 2px dotted rgb(var(--ml-c-gray-2));
   opacity: 0.5;
 }
