--- a/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl-attrib.postcss
@@ -1,18 +1,16 @@
 .maplibregl-ctrl.maplibregl-ctrl-attrib {
   padding: 0 5px;
-  background-color: rgb(var(--ml-c-bg) / 65%);
+  background-color: rgb(255 255 255 / 50%);
   margin: 0;
-  font: var(--ml-font-footer);
 }
 
-/* not print */
 @media screen {
   .maplibregl-ctrl-attrib.maplibregl-compact {
     min-height: 20px;
     padding: 2px 24px 2px 0;
     margin: 10px;
     position: relative;
-    background-color: rgb(var(--ml-c-bg));
+    background-color: #fff;
     color: #000;
     border-radius: 12px;
     box-sizing: content-box;
@@ -31,9 +29,8 @@
   .maplibregl-ctrl-attrib-button {
     cursor: pointer;
     position: absolute;
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
     background-color: rgb(255 255 255 / 50%);
-
-    display: block;
     width: 24px;
     height: 24px;
     box-sizing: border-box;
@@ -44,19 +41,13 @@
     border: 0;
   }
 
-  .maplibregl-ctrl-attrib-button::before {
-    content: "\e808";
-    margin: 2px 5px;
-    font-size: 14px;
-  }
-
   .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button,
   .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button {
     left: 0;
   }
 
   .maplibregl-ctrl-attrib.maplibregl-compact-show .maplibregl-ctrl-attrib-button {
-    background-color: rgb(var(--ml-c-gray-2));
+    background-color: rgb(0 0 0 / 5%);
   }
 
   .maplibregl-ctrl-bottom-right > .maplibregl-ctrl-attrib.maplibregl-compact::after {
@@ -80,13 +71,25 @@
   }
 }
 
+@media screen and (-ms-high-contrast: active) {
+  .maplibregl-ctrl-attrib.maplibregl-compact::after {
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg", fill=#fff);
+  }
+}
+
+@media screen and (-ms-high-contrast: black-on-white) {
+  .maplibregl-ctrl-attrib.maplibregl-compact::after {
+    background-image: svg-load("../assets/maplibregl-ctrl-attrib.svg");
+  }
+}
+
 .maplibregl-ctrl-attrib a {
-  color: rgb(var(--ml-c-text));
+  color: rgb(0 0 0 / 75%);
   text-decoration: none;
 }
 
 .maplibregl-ctrl-attrib a:hover {
-  color: rgb(var(--ml-c-neutral));
+  color: inherit;
   text-decoration: underline;
 }
 
