--- a/packages/maplibre-theme/src/themes/classic/ui/popup--content.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ui/popup--content.postcss
@@ -6,6 +6,8 @@
   border-radius: 0 3px 0 0;
   cursor: pointer;
   background-color: transparent;
+  min-width: 20px;
+  font-size: 16px;
 }
 
 .maplibregl-popup-close-button:hover {
@@ -20,5 +22,5 @@
   background: rgb(var(--ml-c-bg));
   border-radius: 3px;
   box-shadow: var(--ml-shadow);
-  padding: 15px 10px;
+  padding: 20px;
 }
