ml theme add modern theme

--- a/packages/maplibre-theme/src/modern.css
+++ b/packages/maplibre-theme/src/modern.css
@@ -1,5 +1,6 @@
 @import "./core.css";
 
+@import "./themes/modern/vars.postcss";
 @import "./themes/modern/font/fontello.postcss";
 
 @import "./themes/modern/ctrl/ctrl--base.postcss";
