--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-terrain.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-terrain.postcss
@@ -1,9 +1,8 @@
 .maplibregl-ctrl button.maplibregl-ctrl-terrain .maplibregl-ctrl-icon::before {
-  color: #333;
   content: "\e810";
 }
 
 .maplibregl-ctrl button.maplibregl-ctrl-terrain-enabled .maplibregl-ctrl-icon::before {
-  color: #33b5e5;
+  color: rgb(var(--ml-c-active));
   content: "\e810";
 }
