--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--button.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--button.postcss
@@ -1,8 +1,3 @@
-.maplibregl-ctrl-group button {
-  display: block;
-  background-color: transparent;
-}
-
 .maplibregl-ctrl button,
 .maplibregl-ctrl-attrib-button {
   width: 2rem;
@@ -11,53 +6,54 @@
   outline: none;
   padding: 0;
   border: 0;
-  box-sizing: border-box;
+  color: rgb(var(--ml-c-icon));
 
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke,
     box-shadow;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.3s;
-
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.15), 0 1px 2px -1px rgb(0 0 0 / 0.15);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
-    var(--tw-shadow);
+}
+.maplibregl-ctrl-group button {
+  display: block;
+  background-color: transparent;
+  position: relative;
+  box-shadow: var(--ml-ring-shadow-active, 0 0 #0000);
 }
 
 .maplibregl-ctrl button:not(:disabled):hover,
 .maplibregl-ctrl-attrib-button:not(:disabled):hover {
-  background-color: rgb(var(--color-gray-1));
+  background-color: rgb(var(--ml-c-gray-1));
+  color: rgb(var(--ml-c-neutral));
 }
 .maplibregl-ctrl button:not(:disabled):active,
 .maplibregl-ctrl-attrib-button:not(:disabled):active {
-  background-color: rgb(var(--color-gray-2));
-
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.15), 0 4px 6px -2px rgb(0 0 0 / 0.15);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color),
-    0 4px 6px -2px var(--tw-shadow-color);
+  background-color: rgb(var(--ml-c-gray-2));
+  box-shadow: var(--ml-ring-shadow-active, 0 0 #0000), var(--ml-shadow-active);
 }
 
 .maplibregl-ctrl button:focus,
 .maplibregl-ctrl-attrib-button:focus {
-  --tw-ring-shadow: 0 0 0px 2px rgb(var(--color-yellow-5) / 1);
+  --ml-ring-shadow-active: var(--ml-ring-shadow);
+}
+.maplibregl-ctrl button:focus {
+  z-index: 2;
 }
 
 .maplibregl-ctrl button:focus:focus-visible,
 .maplibregl-ctrl-attrib-button:focus:focus-visible {
-  --tw-ring-shadow: 0 0 0px 2px rgb(var(--color-yellow-5) / 1);
+  --ml-ring-shadow-active: var(--ml-ring-shadow);
 }
 
 .maplibregl-ctrl button:focus:not(:focus-visible),
 .maplibregl-ctrl-attrib-button:focus:not(:focus-visible) {
-  --tw-ring-shadow: 0 0 #0000;
+  --ml-ring-shadow-active: 0 0 #0000;
 }
 
 .maplibregl-ctrl button .maplibregl-ctrl-icon {
   display: grid;
   place-content: center;
-  position: relative;
-  width: 2rem;
-  height: 2rem;
+  width: 100%;
+  height: 100%;
 }
 
 .maplibregl-ctrl .maplibregl-ctrl-attrib-button::before,
@@ -70,10 +66,10 @@
 
   display: inline-block;
   text-decoration: inherit;
+  text-align: center;
   /* = 25px */
   width: 1.563rem;
   height: 1.563rem;
-  text-align: center;
   /* opacity: .8; */
 
   /* For safety - reset parent styles, that can break glyph codes*/
@@ -87,9 +83,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.25rem;
-
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
 @media (-ms-high-contrast: active) {
