--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--components.postcss
@@ -1,10 +1,10 @@
 .maplibregl-ctrl-group {
   border-radius: 1rem;
-  background: #fff;
+  background: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-ctrl-group:not(:empty) {
-  /* box-shadow: 0 0 0 2px rgb(0 0 0 / 10%); */
+  box-shadow: var(--ml-shadow);
 }
 
 @media (-ms-high-contrast: active) {
@@ -14,7 +14,7 @@
 }
 
 .maplibregl-ctrl-group button + button {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid rgb(var(--ml-c-gray-2));
 }
 
 @media (-ms-high-contrast: active) {
