--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-attrib.postcss
@@ -1,15 +1,35 @@
 .maplibregl-ctrl.maplibregl-ctrl-attrib {
-  background-color: rgb(255 255 255 / 50%);
+  background-color: rgb(var(--ml-c-bg) / 65%);
   min-height: 2rem;
+  margin: 0;
+  padding: 0 0.5rem;
+}
+
+.maplibregl-ctrl-bottom-right > .maplibregl-ctrl-attrib {
+  border-top-left-radius: 1rem;
+}
+
+.maplibregl-ctrl-top-right > .maplibregl-ctrl-attrib {
+  border-bottom-left-radius: 1rem;
+}
+
+.maplibregl-ctrl-top-left > .maplibregl-ctrl-attrib {
+  border-bottom-right-radius: 1rem;
+}
+
+.maplibregl-ctrl-bottom-left > .maplibregl-ctrl-attrib {
+  border-top-right-radius: 1rem;
 }
 
 @media screen {
   .maplibregl-ctrl-attrib.maplibregl-compact {
+    min-height: 2rem;
     padding: 0 2rem 0 0;
     position: relative;
-    background-color: #fff;
+    background-color: rgb(var(--ml-c-bg));
     color: #000;
     border-radius: 1rem;
+    margin: 0.5rem;
   }
 
   .maplibregl-ctrl-attrib.maplibregl-compact-show {
@@ -24,8 +44,9 @@
 
   .maplibregl-ctrl-attrib-button {
     border-radius: 1rem;
-
     position: absolute;
+    background-color: rgb(255 255 255 / 50%);
+
     top: 0;
     right: 0;
   }
@@ -33,49 +54,11 @@
   .maplibregl-ctrl-attrib-button::before {
     content: "\e808";
     margin: 0.2rem 0.2rem;
-    /* font-size: 1.25rem;
-    height: 2rem;
-    display: grid;
-    place-content: center;
-    margin: 0 0.3em; */
   }
 
   .maplibregl-ctrl-top-left .maplibregl-ctrl-attrib-button,
   .maplibregl-ctrl-bottom-left .maplibregl-ctrl-attrib-button {
     left: 0;
-  }
-
-  .maplibregl-ctrl-bottom-right > .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    bottom: 0;
-    right: 0;
-  }
-
-  .maplibregl-ctrl-top-right > .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    top: 0;
-    right: 0;
-  }
-
-  .maplibregl-ctrl-top-left > .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    top: 0;
-    left: 0;
-  }
-
-  .maplibregl-ctrl-bottom-left > .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    bottom: 0;
-    left: 0;
-  }
-}
-
-@media screen and (-ms-high-contrast: active) {
-  /* TODO why after ? */
-  .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    color: #fff;
-  }
-}
-
-@media screen and (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl-attrib.maplibregl-compact::after {
-    color: #000;
   }
 }
 
@@ -84,12 +67,12 @@
 }
 
 .maplibregl-ctrl-attrib a {
-  color: rgb(var(--color-gray-7));
+  color: rgb(var(--ml-c-text));
   text-decoration: none;
 }
 
 .maplibregl-ctrl-attrib a:hover {
-  color: inherit;
+  color: rgb(var(--ml-c-neutral));
   text-decoration: underline;
 }
 
