--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-navigation.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-navigation.postcss
@@ -1,60 +1,19 @@
 .maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon::before {
-  color: #333;
   content: "-";
 }
 
 .maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon::before {
-  color: #333;
   content: "+";
 }
 
-@media (-ms-high-contrast: active) {
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon::before {
-    color: #fff;
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon::before {
-    color: #fff;
-  }
-}
-
-@media (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-out .maplibregl-ctrl-icon::before {
-    color: #000;
-  }
-
-  .maplibregl-ctrl button.maplibregl-ctrl-zoom-in .maplibregl-ctrl-icon::before {
-    color: #000;
-  }
-}
-
 .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::before {
-  color: #333;
   content: "\e809";
 }
 .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::after {
-  color: #ccc;
+  color: rgb(var(--ml-c-gray-2));
   content: "\e80a";
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-}
-
-@media (-ms-high-contrast: active) {
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::before {
-    color: #fff;
-  }
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::after {
-    color: #999;
-  }
-}
-
-@media (-ms-high-contrast: black-on-white) {
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::before {
-    color: #000;
-  }
-  .maplibregl-ctrl button.maplibregl-ctrl-compass .maplibregl-ctrl-icon::after {
-    color: #000;
-  }
 }
