--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-scale.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-scale.postcss
@@ -1,10 +1,13 @@
 .maplibregl-ctrl-scale {
-  background-color: rgb(255 255 255 / 75%);
+  background-color: rgb(var(--ml-c-bg) / 65%);
   font-size: 0.875rem;
+  line-height: 1rem;
   border-width: medium 2px 2px;
   border-style: none solid solid;
-  border-color: rgb(var(--color-gray-7));
-  padding: 0 0.25rem;
-  color: rgb(var(--color-gray-7));
+  border-color: rgb(var(--ml-c-icon));
+  padding: 0 5px;
+  color: rgb(var(--ml-c-icon));
   box-sizing: border-box;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
