--- a/packages/maplibre-theme/src/themes/modern/handler/boxzoom.postcss
+++ b/packages/maplibre-theme/src/themes/modern/handler/boxzoom.postcss
@@ -1,6 +1,6 @@
 .maplibregl-boxzoom {
-  background: #fff;
-  border: 2px dotted #202020;
+  background: rgb(var(--ml-c-bg));
+  border: 2px dotted rgb(var(--ml-c-gray-2));
   opacity: 0.5;
   border-radius: 0.5rem;
 }
