--- a/packages/maplibre-theme/src/themes/modern/layout.postcss
+++ b/packages/maplibre-theme/src/themes/modern/layout.postcss
@@ -1,30 +1,4 @@
 .maplibregl-map {
   border-radius: 1rem;
-
-  /* bg outlined color */
-  --color-yellow-1: 255 250 199; /* rgb(255, 250, 199); */
-
-  /* bg outlined hovered color */
-  --color-yellow-2: 255 245 142; /* rgb(255, 245, 142); */
-
-  /* button default bgcolor */
-  --color-yellow-3: 255 232 34; /* rgb(255, 232, 34); */
-
-  /* text color, button hover bgcolor */
-  --color-yellow-4: 242 214 62; /* rgb(242, 214, 62); */
-
-  /* text hover color, button active bgcolor */
-  --color-yellow-5: 219 167 38; /* rgb(219, 167, 38); */
-
-  --color-gray-0: 255 255 255; /* rgb(255, 255, 255); */
-  --color-gray-1: 242 242 242; /* rgb(242, 242, 242); */
-  --color-gray-2: 228 228 228; /* rgb(228, 228, 228); */
-  --color-gray-3: 204 204 204; /* rgb(204, 204, 204); */
-  --color-gray-4: 180 180 180; /* rgb(180, 180, 180); */
-  --color-gray-5: 140 140 140; /* rgb(140, 140, 140); */
-  /* text-hint text-disabled */
-  --color-gray-6: 90 90 90; /* rgb(90, 90, 90); */
-  --color-gray-7: 50 50 50; /* rgb(50, 50, 50); */
-  --color-gray-8: 0 0 0; /* rgb(0, 0, 0); */
-  --color-gray-text: var(--color-gray-7);
+  color: rgb(var(--ml-c-text));
 }
