--- a/packages/maplibre-theme/src/themes/modern/ui/popup--base.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ui/popup--base.postcss
@@ -3,35 +3,35 @@
 }
 
 .maplibregl-popup-anchor-top .maplibregl-popup-tip {
-  border-bottom-color: #fff;
+  border-bottom-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-top-left .maplibregl-popup-tip {
-  border-bottom-color: #fff;
+  border-bottom-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-top-right .maplibregl-popup-tip {
-  border-bottom-color: #fff;
+  border-bottom-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
-  border-top-color: #fff;
+  border-top-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-bottom-left .maplibregl-popup-tip {
-  border-top-color: #fff;
+  border-top-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-bottom-right .maplibregl-popup-tip {
-  border-top-color: #fff;
+  border-top-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-left .maplibregl-popup-tip {
-  border-right-color: #fff;
+  border-right-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-right .maplibregl-popup-tip {
-  border-left-color: #fff;
+  border-left-color: rgb(var(--ml-c-bg));
 }
 
 .maplibregl-popup-anchor-top-left .maplibregl-popup-content {
