--- a/packages/maplibre-theme/src/themes/modern/ui/popup--content.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ui/popup--content.postcss
@@ -7,7 +7,7 @@
   height: 2rem;
   border-radius: 1rem;
   cursor: pointer;
-  background-color: white;
+  background-color: transparent;
   font-size: 1.5rem;
 
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke,
@@ -17,19 +17,16 @@
 }
 
 .maplibregl-popup-close-button:hover {
-  background-color: rgb(var(--color-gray-1));
+  background-color: rgb(var(--ml-c-gray-1));
 }
 .maplibregl-popup-close-button:active {
-  background-color: rgb(var(--color-gray-2));
+  background-color: rgb(var(--ml-c-gray-2));
 }
 
 .maplibregl-popup-content {
-  background: #fff;
+  background: rgb(var(--ml-c-bg));
   border-radius: 1rem;
   padding: 0.5rem 2.5rem 0.5rem 0.5rem;
   min-height: 2.5rem;
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.15), 0 1px 2px -1px rgb(0 0 0 / 0.15);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
-    var(--tw-shadow);
+  box-shadow: var(--ml-shadow);
 }
