ml-theme update README

--- a/packages/maplibre-theme/src/themes/classic/vars.postcss
+++ b/packages/maplibre-theme/src/themes/classic/vars.postcss
@@ -3,10 +3,8 @@
   --ml-font: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
   --ml-font-attribution: 12px/20px "Helvetica Neue", Arial, Helvetica, sans-serif;
 
-  --blue: 29 161 242;
   --ml-c-neutral: 0 0 0;
 
-  --ml-c-active: var(--blue);
   --ml-c-error: 229 78 51;
 
   --ml-c-bg: 255 255 255;
@@ -23,8 +21,9 @@
   --ml-shadow-ctrl: 0 0 0 2px rgb(0 0 0 / 10%);
   --ml-shadow-popup: 0 1px 2px rgb(0 0 0 / 10%);
 
-  --ml-c-geoloc: var(--blue);
-  --ml-outline: 0 0 2px 2px rgb(var(--blue));
+  --ml-c-active: 29 161 242;
+  --ml-c-geoloc: 29 161 242;
+  --ml-outline: 0 0 2px 2px rgb(29 161 242);
 }
 
 .dark {
