ml-theme fix typo errors

--- a/packages/maplibre-theme/src/themes/modern/vars.postcss
+++ b/packages/maplibre-theme/src/themes/modern/vars.postcss
@@ -22,9 +22,6 @@
   --ml-font: inherit;
   --ml-font-attribution: inherit;
 
-  --blue: 29 161 242;
-
-  --ml-c-active: var(--blue);
   --ml-c-error: 229 78 51;
 
   --ml-c-bg: 255 255 255;
@@ -55,7 +52,8 @@
   --ml-shadow-active: 0 10px 15px -3px rgb(0 0 0 / 0.15), 0 4px 6px -2px rgb(0 0 0 / 0.15);
   --ml-ring-shadow: 0 0 0px 2px rgb(var(--color-yellow-5) / 1);
 
-  --ml-c-geoloc: var(--blue);
+  --ml-c-active: 29 161 242;
+  --ml-c-geoloc: 29 161 242;
 }
 
 .dark {
