mrc-doc add shiki loader

--- a/apps/mrc-doc/src/main.css
+++ b/apps/mrc-doc/src/main.css
@@ -8,6 +8,8 @@
 @import "./icons/fontello.css";
 @import "./base.css";
 
+@import "./shiki.css";
+
 @keyframes spin {
   to {
     transform: rotate(360deg);
