--- a/apps/mrc-doc/src/icons/fontello.css
+++ b/apps/mrc-doc/src/icons/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('./fontello.eot?52873838');
-  src: url('./fontello.eot?52873838#iefix') format('embedded-opentype'),
-       url('./fontello.woff2?52873838') format('woff2'),
-       url('./fontello.woff?52873838') format('woff'),
-       url('./fontello.ttf?52873838') format('truetype'),
-       url('./fontello.svg?52873838#fontello') format('svg');
+  src: url('./fontello.eot?17391538');
+  src: url('./fontello.eot?17391538#iefix') format('embedded-opentype'),
+       url('./fontello.woff2?17391538') format('woff2'),
+       url('./fontello.woff?17391538') format('woff'),
+       url('./fontello.ttf?17391538') format('truetype'),
+       url('./fontello.svg?17391538#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('./fontello.svg?52873838#fontello') format('svg');
+    src: url('./fontello.svg?17391538#fontello') format('svg');
   }
 }
 */
@@ -57,6 +57,7 @@
 .fe-heart:before { content: '\e800'; } /* '' */
 .fe-cancel:before { content: '\e801'; } /* '' */
 .fe-menu:before { content: '\e802'; } /* '' */
+.fe-link:before { content: '\e803'; } /* '' */
 .fe-star:before { content: '\e804'; } /* '' */
 .fe-search:before { content: '\e808'; } /* '' */
 .fe-github:before { content: '\f09b'; } /* '' */
