--- a/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--base.postcss
+++ b/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--base.postcss
@@ -27,7 +27,7 @@
   box-shadow: 0 0 0 2px rgb(0 0 0 / 10%);
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-group:not(:empty) {
     box-shadow: 0 0 0 2px ButtonText;
   }
