--- a/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/legacy/ctrl/ctrl--components.postcss
@@ -22,7 +22,7 @@
   background-position: center center;
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-icon {
     background-color: transparent;
   }
