--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl--components.postcss
@@ -1,13 +1,14 @@
 .maplibregl-ctrl-group {
   border-radius: 1rem;
   background: rgb(var(--ml-c-bg));
+  overflow: hidden;
 }
 
 .maplibregl-ctrl-group:not(:empty) {
   box-shadow: var(--ml-shadow);
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-group:not(:empty) {
     box-shadow: 0 0 0 2px ButtonText;
   }
@@ -17,7 +18,7 @@
   border-top: 1px solid rgb(var(--ml-c-gray-2));
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-group button + button {
     border-top: 1px solid ButtonText;
   }
