--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-geolocate.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-geolocate.postcss
@@ -12,7 +12,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, calc(-50% - 1px));
 }
 
 .maplibregl-ctrl
