--- a/apps/mrc-doc/src/base.css
+++ b/apps/mrc-doc/src/base.css
@@ -5,6 +5,12 @@ html {
 }
 body {
   @apply bg-gray-0 font-sans text-gray-7;
+  /* background-image: conic-gradient(
+    from 90deg at -10% 100%,
+    #e0e3eb 0deg,
+    #e0e3eb 90deg,
+    #fff 1turn
+  ); */
 }
 .light {
   color-scheme: light;
