--- a/packages/maplibre-theme/src/classic.css
+++ b/packages/maplibre-theme/src/classic.css
@@ -1,7 +1,8 @@
 @import "./core.css";
 
+@import "./icons/default/fontello.postcss";
+
 @import "./themes/classic/vars.postcss";
-@import "./themes/classic/font/fontello.postcss";
 
 @import "./themes/classic/ctrl/ctrl--base.postcss";
 @import "./themes/classic/ctrl/ctrl--components.postcss";
