--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--components.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--components.postcss
@@ -7,7 +7,7 @@
   box-shadow: var(--ml-shadow-ctrl);
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-group:not(:empty) {
     box-shadow: 0 0 0 2px ButtonText;
   }
@@ -17,7 +17,7 @@
   border-top: 1px solid rgb(var(--ml-c-gray-2));
 }
 
-@media (-ms-high-contrast: active) {
+@media (forced-colors: active) {
   .maplibregl-ctrl-group button + button {
     border-top: 1px solid ButtonText;
   }
