--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--button.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl--button.postcss
@@ -66,11 +66,13 @@
   opacity: 0.25;
 }
 
-.maplibregl-ctrl button:not(:disabled):hover {
+.maplibregl-ctrl button:not(:disabled):hover,
+.maplibregl-ctrl-attrib-button:not(:disabled):hover {
   background-color: rgb(var(--ml-c-gray-1));
 }
 
-.maplibregl-ctrl button:not(:disabled):active {
+.maplibregl-ctrl button:not(:disabled):active,
+.maplibregl-ctrl-attrib-button:not(:disabled):active {
   background-color: rgb(var(--ml-c-gray-2));
 }
 
