--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
@@ -13,7 +13,7 @@
     margin: 10px;
     position: relative;
     background-color: rgb(var(--ml-c-bg));
-    color: #000;
+    color: rgb(var(--ml-c-text));
     border-radius: 12px;
   }
 
@@ -30,7 +30,6 @@
   .maplibregl-ctrl-attrib-button {
     cursor: pointer;
     position: absolute;
-    background-color: rgb(255 255 255 / 50%);
 
     width: 24px;
     height: 24px;
