--- a/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ctrl/ctrl-attrib.postcss
@@ -27,13 +27,13 @@
     padding: 0 2rem 0 0;
     position: relative;
     background-color: rgb(var(--ml-c-bg));
-    color: #000;
+    color: rgb(var(--ml-c-text));
     border-radius: 1rem;
     margin: 0.5rem;
   }
 
   .maplibregl-ctrl-attrib.maplibregl-compact-show {
-    padding: 0 2.5rem 0 0.5rem;
+    padding: 0 2.25rem 0 0.5rem;
   }
 
   .maplibregl-ctrl-top-left > .maplibregl-ctrl-attrib.maplibregl-compact-show,
