maplibre-theme add demo page

--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-attrib.postcss
@@ -8,7 +8,7 @@
 /* not print */
 @media screen {
   .maplibregl-ctrl-attrib.maplibregl-compact {
-    min-height: 24px;
+    min-height: 20px;
     padding: 2px 24px 2px 0;
     margin: 10px;
     position: relative;
@@ -38,6 +38,7 @@
     top: 0;
     right: 0;
     border: 0;
+    box-sizing: border-box;
   }
 
   .maplibregl-ctrl-attrib-button::before {
