--- a/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-logo.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ctrl/ctrl-logo.postcss
@@ -2,6 +2,7 @@ a.maplibregl-ctrl-logo {
   margin: 0 0 -4px -4px;
   display: block;
   cursor: pointer;
+  text-decoration: none;
 }
 
 a.maplibregl-ctrl-logo::before {
