--- a/packages/maplibre-theme/src/themes/modern/ui/popup--content.postcss
+++ b/packages/maplibre-theme/src/themes/modern/ui/popup--content.postcss
@@ -9,6 +9,7 @@
   cursor: pointer;
   background-color: transparent;
   font-size: 1.5rem;
+  color: rgb(var(--ml-c-icon));
 
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke,
     box-shadow;
@@ -29,4 +30,5 @@
   padding: 0.5rem 2.5rem 0.5rem 0.5rem;
   min-height: 2.5rem;
   box-shadow: var(--ml-shadow);
+  box-sizing: border-box;
 }
