--- a/packages/maplibre-theme/demo/App.scss
+++ b/packages/maplibre-theme/demo/App.scss
@@ -1,3 +1,7 @@
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 html,
 body,
 #root,
@@ -6,6 +10,16 @@ body,
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+#app {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.map-container {
+  height: 500px;
+  padding: 2rem;
 }
 
 .dark {
