--- a/packages/maplibre-theme/src/themes/modern/vars.postcss
+++ b/packages/maplibre-theme/src/themes/modern/vars.postcss
@@ -1,6 +1,7 @@
 :root {
   --ml-ctrl-border-radius: 1rem;
-  --ml-font: inherit;
+  --ml-font: 16px/24px system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   --ml-font-attribution: inherit;
 
   --ml-c-error: 229 78 51;
