--- a/apps/sandbox/src/shared/ml-overlay.css
+++ b/apps/sandbox/src/shared/ml-overlay.css
@@ -8,8 +8,17 @@ body,
   height: 100%;
 }
 
+.ll-marker .marker .text {
+  font-weight: 600;
+  font-size: max(10px, var(--marker-size) * 0.3);
+}
+
 .map-overlay {
-  font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font:
+    12px/20px "Helvetica Neue",
+    Arial,
+    Helvetica,
+    sans-serif;
   position: absolute;
   min-width: 200px;
   top: 0;
@@ -53,7 +62,6 @@ body,
   & button {
     border-width: revert;
     background-color: revert;
-
   }
 
   & button.color {
@@ -71,37 +79,4 @@ body,
       box-shadow: inset 0 0 0 3px rgba(0, 0, 0, 0.1);
     }
   }
-}
-
-.overlay {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-}
-
-.overlay button {
-  font: 600 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  background-color: #3386c0;
-  color: #fff;
-  display: inline-block;
-  margin: 0;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 3px;
-}
-
-.overlay button:hover {
-  background-color: #4ea0da;
-}
-
-.calculation-box {
-  height: 125px;
-  width: 250px;
-  position: absolute;
-  bottom: 40px;
-  left: 10px;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 15px;
-  text-align: center;
 }
