--- a/apps/mrc-doc/src/style/shiki.css
+++ b/apps/mrc-doc/src/style/shiki.css
@@ -19,6 +19,29 @@ pre code span:is([data-line], .line) {
   @apply rounded-2xl lg:-mb-7 lg:mt-7;
 }
 
+code {
+  counter-reset: line;
+}
+code > [data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+
+  /* Other styling */
+  display: inline-block;
+  width: 1rem;
+  margin-right: 2rem;
+  text-align: right;
+  color: gray;
+}
+
+code[data-line-numbers-max-digits="2"] > [data-line]::before {
+  width: 2rem;
+}
+
+code[data-line-numbers-max-digits="3"] > [data-line]::before {
+  width: 3rem;
+}
+
 pre[data-theme*=" "],
 pre.shiki-themes {
   color: var(--shiki-light);
