--- a/packages/maplibre-react-components/src/components/RGradientMarker/GradientMarker.css
+++ b/packages/maplibre-react-components/src/components/RGradientMarker/GradientMarker.css
@@ -6,8 +6,6 @@
 
   --marker-color: rgb(var(--color-yellow-3));
   --marker-color-dark: color-mix(in srgb, var(--marker-color), black 40%);
-  --ovale-color-hover: color-mix(in srgb, var(--marker-color), white 10%);
-  --ovale-color-active: color-mix(in srgb, var(--marker-color), white 1%);
   --marker-color-gradient: linear-gradient(120deg, var(--marker-color), var(--marker-color-dark));
 
   cursor: pointer;
@@ -113,11 +111,6 @@
     font-family: "fontello-mrc", sans-serif;
   }
 
-  /* ??? */
-  & i::before {
-    font-family: "fontello", sans-serif;
-  }
-
   & > .marker::after,
   .inactive,
   i::before {
@@ -144,10 +137,11 @@
     transition: background-position 0.3s ease;
   }
 
-  .ovale,
-  .inactive,
-  i,
-  .text {
+  & .circle,
+  & .inactive,
+  & i,
+  & svg,
+  & .text {
     position: absolute;
     left: calc(var(--marker-size) / 10);
     top: calc(var(--marker-size) / 10);
@@ -155,7 +149,7 @@
     height: calc(var(--marker-size) / 2) !important;
   }
 
-  .ovale {
+  & .circle {
     z-index: 2;
     border-radius: 50%;
     background-color: rgb(var(--color-gray-0));
@@ -171,8 +165,13 @@
     &::before {
       font-size: calc(var(--marker-size) / 3) !important;
       z-index: 3;
-      color: var(--text-default);
+      color: inherit;
     }
+  }
+
+  & svg {
+    z-index: 3;
+    transform: scale(0.8);
   }
 
   & .text {
@@ -199,7 +198,7 @@
       z-index: 4;
       font-size: calc(var(--marker-size) / 2) !important;
       content: "\e81f";
-      color: var(--color-red-3);
+      color: rgb(var(--color-red-3));
     }
   }
 
@@ -209,15 +208,15 @@
       background-position: 0px;
     }
 
-    .ovale {
-      background-color: var(--ovale-color-hover);
+    .circle {
+      background-color: rgb(var(--color-gray-0) / 50%);
     }
   }
 
   &:not(.draggable):active,
   &:not(.draggable).active {
-    .ovale {
-      background-color: var(--ovale-color-active);
+    .circle {
+      background-color: rgb(var(--color-gray-0) / 1%);
     }
   }
 
@@ -237,7 +236,7 @@
     & > .marker::after {
       /* fe-marker */
       content: "\e81c";
-      color: var(--color-gray-1);
+      color: rgb(var(--color-gray-2));
     }
   }
 }
