--- a/apps/mrc-doc/src/style/layout.css
+++ b/apps/mrc-doc/src/style/layout.css
@@ -5,10 +5,14 @@ html {
 }
 body {
   @apply bg-gray-0 font-sans text-gray-7;
-  /* background-image: conic-gradient(
+}
+
+body:not(.dark) {
+  background-image: conic-gradient(
     from 90deg at -10% 100%,
     #e0e3eb 0deg,
     #e0e3eb 90deg,
     #fff 1turn
-  ); */
+  );
+  background-attachment: fixed;
 }
