maplibre-theme update readme change className theme selector

--- a/packages/maplibre-theme/src/themes/classic/ui/popup--content.postcss
+++ b/packages/maplibre-theme/src/themes/classic/ui/popup--content.postcss
@@ -8,6 +8,7 @@
   background-color: transparent;
   min-width: 20px;
   font-size: 16px;
+  color: rgb(var(--ml-c-icon));
 }
 
 .maplibregl-popup-close-button:hover {
