mrc-doc fix tw focus-visible

--- a/apps/mrc-doc/src/style/layout.css
+++ b/apps/mrc-doc/src/style/layout.css
@@ -16,3 +16,10 @@ body:not(.dark) {
   );
   background-attachment: fixed;
 }
+
+.light {
+  color-scheme: light;
+}
+.dark {
+  color-scheme: dark;
+}
