--- a/apps/mrc-doc/src/style/index.css
+++ b/apps/mrc-doc/src/style/index.css
@@ -1,16 +1,12 @@
 @import "./vars.css";
+@import "./tailwind.css";
+@import "./layout.css";
 
-@import "tailwindcss/base";
-@import "./base.css";
-
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "./icons/fontello.css";
+@import "./shiki.css";
 
 @import "maplibre-theme/modern.scoped.css";
 @import "maplibre-theme/classic.scoped.css";
 @import "maplibre-react-components/dist/style.css";
 
-@import "./icons/fontello.css";
-@import "./shiki.css";
-@import "./layout.css";
 @import "./maplibre-extra.css";
