front share search feature

--- a/apps/front/src/style/index.css
+++ b/apps/front/src/style/index.css
@@ -3,7 +3,7 @@
 @import "tailwindcss/utilities";
 
 @import "./fontello/index.css";
-@import "./maplibregl/index.css";
+@import "./map/index.css";
 @import "maplibre-react-components/style.css";
 
 html {
