--- a/apps/front/src/style/index.css
+++ b/apps/front/src/style/index.css
@@ -6,31 +6,9 @@
 @import "./map/index.css";
 @import "maplibre-react-components/style.css";
 
+@import "pentatrion-geo/style.css";
+
 html {
   --sidebar-extra-width: 50%;
   --sidebar-extra-height: 50%;
 }
-
-.ll-marker .marker .text {
-  font-weight: 600;
-  font-size: max(10px, var(--marker-size) * 0.3);
-}
-
-/* .maplibregl-ctrl-top-right {
-  & .ll-quick-settings {
-    padding: var(--space-2);
-  }
-
-  @media (max-width: 700px) {
-    left: 0;
-
-    & .maplibregl-ctrl {
-
-
-
-      &.distraction-free {
-        transform: translateX(100%);
-      }
-    }
-  }
-} */
