--- a/apps/front/src/style/map/ui/marker.css
+++ b/apps/front/src/style/map/ui/marker.css
@@ -1,7 +1,14 @@
 .maplibregl-marker {
-    left: 0;
-    position: absolute;
-    top: 0;
-    transition: opacity .2s;
-    will-change: transform
+  left: 0;
+  position: absolute;
+  top: 0;
+  transition: opacity 0.2s;
+  will-change: transform;
+}
+
+.maplibregl-marker[data-shape="pin"] {
+  z-index: 2;
+}
+.maplibregl-marker[data-shape="circle"] {
+  z-index: 1;
 }
