--- a/apps/front/src/style/index.css
+++ b/apps/front/src/style/index.css
@@ -7,6 +7,7 @@
 @import "maplibre-react-components/style.css";
 
 @import "pentatrion-geo/style.css";
+@import "./zIndex.css";
 
 html {
   --sidebar-streetview-width: 50%;
